Mingw does not contain an implementation of urlmon so avoid calling it. Bug #244449 r=mscott